[project]
name = "gpt2"
version = "0.1.0"
description = "the minimal full-stack gpt2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9.0",
    "transformers",
    "tiktoken>=0.11.0",
    "datasets"
]

[project.optional-dependencies]  
cpu = [  
    "torch>=2.9.0",  
]  
gpu = [  
    "torch>=2.9.0",  
]  

# target torch to cuda 13.0 or CPU
[tool.uv.sources]
torch = [  
    { index = "pytorch-cpu", extra = "cpu" },  
    { index = "pytorch-cu130", extra = "gpu" },  
]

# Define the custom PyTorch package indices
[[tool.uv.index]]  
name = "pytorch-cpu"  
url = "https://download.pytorch.org/whl/cpu"  
explicit = true  
  
[[tool.uv.index]]  
name = "pytorch-cu130"  
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]  
conflicts = [  
    [  
        { extra = "cpu" },  
        { extra = "gpu" },  
    ],  
]